# DiSCaMB-gpu

./: CMakeLists.txt
include/discamb/MathUtilities/: real_spherical_harmonics.h
include/discamb/Scattering/: SlaterTypeOrbitalScattering.h
src/MathUtilities/: real_spherical_harmonics.cpp
src/Scattering/: HansenCoppens_SF_Engine3.cpp  NGaussianFormFactor.cpp  SlaterTypeOrbitalScattering.cpp  scattering_utilities.cpp
